[FIX] es gab ein Fehler beim zusammensetzen der --add-modules